# smartsearch

./: .dockerignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  codemap.md  pyproject.toml
.slim/: codemap.json
npm/: codemap.md
npm/scripts/: codemap.md
src/: codemap.md
src/smart_search/: codemap.md
src/smart_search/admin/: __init__.py  i18n.py  routes.py  schemas.py
src/smart_search/admin/templates/: audit.html  base.html  config.html  dashboard.html  login.html  providers.html  system.html  tasks.html  tokens.html  usage.html
src/smart_search/auth/: __init__.py  permissions.py  tokens.py
src/smart_search/providers/: codemap.md
src/smart_search/runtime/: __init__.py  capabilities.py  config_resolver.py  context.py  provider_factory.py  tool_runtime.py
src/smart_search/security/: __init__.py  audit.py  crypto.py  masking.py
src/smart_search/server/: __init__.py  app.py  dependencies.py  errors.py  mcp_server.py  schemas.py  task_routes.py  tools.py
src/smart_search/storage/: __init__.py  db.py  models.py  repositories.py
src/smart_search/tasks/: __init__.py  deep.py  queue.py  states.py  worker.py
tests/: test_admin_webui.py  test_cloud_foundation.py  test_server_tools.py  test_tasks.py
