[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-search"
version = "0.1.12"
description = "CLI-first multi-source web research with xAI/OpenAI-compatible search, Exa, Context7, Zhipu, Tavily, Firecrawl, and Deep Research planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.0",
    "InquirerPy>=0.3.4,<0.4",
    "pyfiglet>=1.0,<2",
    "rich>=13.9,<16",
    "tenacity>=8.0.0",
    "sqlalchemy>=2.0,<3",
    "cryptography>=43.0,<44",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smart_search = [
    "assets/skills/smart-search-cli/SKILL.md",
    "assets/skills/smart-search-cli/agents/*.yaml",
    "assets/skills/smart-search-cli/references/*.md",
    "admin/templates/*.html",
]

[project.scripts]
smart-search = "smart_search.cli:main"
